<?xml version="1.0"?>
<package format="2">
  <name>hma_pcl_reconst</name>
  <version>0.0.0</version>
  <description>The hma_pcl_reconst package</description>

  <maintainer email="kobayashi.ryohei621@mail.kyutech.jp">ryohei.kobayashi</maintainer>
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>image_proc</build_depend>
  <build_depend>depth_image_proc</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <build_export_depend>image_proc</build_export_depend>
  <build_export_depend>depth_image_proc</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>

  <exec_depend>nodelet</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>image_proc</exec_depend>
  <exec_depend>depth_image_proc</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_description.xml" />
  </export>

</package>
