<?xml version="1.0"?>
<package format="2">
  <name>hma_pcl_reconst</name>
  <version>0.0.0</version>
  <description>The hma_pcl_reconst package</description>

  <maintainer email="kobayashi.ryohei621@mail.kyutech.jp">ryohei.kobayashi</maintainer>
  <license>TODO</license>





  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>depth_image_proc</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>image_geometry</exec_depend>
  <exec_depend>depth_image_proc</exec_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_description.xml" />
  </export>

</package>
